examples/tester-examples.red
Red [
    Title: "Tester Tool examples"
    Description: "Show all functionalities and usage of Tester tool"
    Author: "Mateusz Palichleb"
    File: %tester-examples.red
]

do %../src/tester.red

; ------------------------------------------------------
; Example 1: TBA
; ------------------------------------------------------
 
 ; tests like in README which shows all Tester functionalities
 ; - all assertions
 ; - expected-error and not
 ; - success/failures
 ; - data providers
 ; - multiple test files in one Suite
